:sparkles: github api 연결, 페이지네이션, 필터 모달 적용
리스트 컴포넌트 데이터 연결, 필터 데이터 연결

--- a/github-issue-clone/src/components/ListFilter.module.css
+++ b/github-issue-clone/src/components/ListFilter.module.css
@@ -1,6 +1,8 @@
 .filterLists {
   display: flex;
-  align-items: center;
+}
+.filterWrapper {
+  margin-left: auto;
 }
 
 .filterLists > div> span {
@@ -15,8 +17,8 @@
 }
 
 .modalContainer {
-  top: 20px;
-  left: 20px;
+  top: 30px;
+  right: 300px;
   position: absolute;
 }
 
