--- a/github-issue-clone/src/components/Modal.module.css
+++ b/github-issue-clone/src/components/Modal.module.css
@@ -46,3 +46,38 @@
   padding: 5px 12px;
   line-height: 20px;
 }
+
+.item {
+  padding: 7px 16px ;
+  border-bottom: 1px solid #30363C;
+  line-height: 1.25;
+  font-size: 12px;
+  cursor: pointer;
+}
+.item:hover {
+  font-weight: 600;
+}
+
+.item:last-child {
+  border-bottom: none;
+}
+
+.list {
+  overflow: auto;
+  max-height: 400px;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #2C2C2C;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #6B6B6B;
+  border-radius: 10px;}
