--- a/github-issue-clone/src/ListContainer.module.css
+++ b/github-issue-clone/src/ListContainer.module.css
@@ -1,6 +1,5 @@
 .listContainer {
   padding: 24px 32px 0;
-  height: 220px;
   background-color: #0d1117;
 }
 
@@ -16,7 +15,9 @@
   background-color: #161B22;
   padding: 16px;
   margin-top: 20px;
+  justify-content: space-between;
 }
+
 .input {
   background-color: #010409;
   border-radius: 6px;
@@ -31,3 +32,4 @@
   display: flex;
   justify-content: center;
 }
+
