--- a/github-issue-clone/src/components/Badge.module.css
+++ b/github-issue-clone/src/components/Badge.module.css
@@ -6,7 +6,7 @@
   margin: 0 5px;
 }
 
-.red {
+/* .red {
   background-color: #3E1D20;
   color: #FEAFAF;
   border: 1px solid #79494C;
@@ -16,4 +16,4 @@
   background-color: #2F4D79;
   color: #67A2F5;
   border: 1px solid #162540;
-}
+} */
