--- a/github-issue-clone/src/components/ListItem.module.css
+++ b/github-issue-clone/src/components/ListItem.module.css
@@ -13,4 +13,12 @@
   margin-right: 8px;
   margin-top: 5px;
 }
-
+.title {
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
+}
+.description {
+  font-size: 12px;
+  color: #8b949e;
+}
