:sparkles: JS 구현 완료

--- a/github-issue-clone/src/components/Badge.module.css
+++ b/github-issue-clone/src/components/Badge.module.css
@@ -1,9 +1,11 @@
 .badge {
   font-size: 12px;
-  line-height: 21px;
+  line-height: 23px;
   border-radius: 2em;
   padding: 2px 7px;
   margin: 0 5px;
+  box-sizing: border-box;
+
 }
 
 /* .red {
