--- a/github-issue-clone/src/pages/CreateIssue.module.css
+++ b/github-issue-clone/src/pages/CreateIssue.module.css
@@ -8,8 +8,11 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: firebrick;
   margin-right: 10px;
+}
+img {
+  height: 40px;
+  width: 40px;
 }
 
 .border {
