--- a/github-issue-clone/src/Header.module.css
+++ b/github-issue-clone/src/Header.module.css
@@ -3,11 +3,25 @@
   background-color: #0d1117;
   box-shadow: inset 0 -1px 0 #21262d;
 }
-
+.headerWrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.titleWrapper {
+  font-size: 20px;
+  color: #58a6ff;
+}
+.name {
+  color: #58a6ff;
+  font-weight: 500;
+}
+.title {
+  color: #58a6ff;
+  font-weight: 700;
+}
 .buttonContainer {
   display: flex;
   padding-bottom: 16px;
-  justify-content: flex-end;
 }
 
 .circle {
